--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -6,3 +6,10 @@
 .posts > .post > .title {
 	border-bottom: 1px solid lightgray;
 }
+
+.col-md-8 {
+    -ms-flex: 0 0 66.666667%;
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+    background-color: thistle;
+}
